####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = dia2code 

EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL README TODO dia2code.lsm Makefile.am aclocal.m4 configure.in dia2code.kaptn dia2code.spec dia2code.1 dia.ico dia1.bmp dia2.bmp dia2code.nsi README.win32 Report_a_Bug.url dia2code_Homepage.url

####### kdevelop will overwrite this part!!! (end)############
AUTOMAKE_OPTIONS = foreign


