bin_PROGRAMS = dia2code
dia2code_CPPFLAGS = @XML_CFLAGS@
dia2code_CFLAGS = @XML_CFLAGS@
dia2code_LDADD = @XML_LIBS@
dia2code_SOURCES = dia2code.c main.c parse_diagram.c scan_tree.c generate_code_c.c \
generate_code_java.c generate_code_cpp.c generate_code_ada.c generate_code_sql.c \
generate_code_python.c generate_code_php.c generate_code_shp.c generate_code_idl.c \
generate_code_csharp.c generate_code_php_five.c generate_code_ruby.c generate_code_as3.c \
decls.c includes.c source_parser.c comment_helper.c


